package swarm.msgs;

/// \ingroup swarm_msgs
/// \interface Gps
/// \brief A message containing GPS information.

message GpsSensor
{
  /// \brief Latitude.
  required double latitude  = 1;

  /// \brief Longitude.
  required double longitude = 2;

  /// \brief Altitude.
  required double altitude  = 3;
}
